--- a/home.html
+++ b/home.html
@@ -53,31 +53,79 @@
     80% { transform: translate(3px, -1px); opacity: 0.8; }
     100% { transform: translate(0); opacity: 1; }
   }
+
+  .neon-border {
+  border: 5px solid #00ffff;
+  box-shadow:
+    0 0 5px #ae00ff,
+    0 0 10px #c300ff,
+    0 0 20px #b700ff,
+    0 0 40px #c300ff;
+  transition: 0.2s ease;
+  }
+
+  .neon-border:focus,
+  .neon-border:hover {
+    box-shadow:
+      0 0 10px #a006ff,
+      0 0 20px #003cff,
+      0 0 30px #0f378d,
+      0 0 60px #0011ff;
+    outline: none;
+  }
+
 </style>
 
 
-<body class="m-0 relative h-screen w-screen overflow-hidden">
+<body>
 
-      <img src="images/sun.jpeg"
+      <img src="images/galaxy.gif"
           class="absolute bg-cover w-screen h-screen -z-10">
-
-
 
       <!-- <img src="images/triple.png"
           class="absolute top-0/4 left-1/2 -translate-x-1/2 w-[700px] h-[400px] object-fill z-0"> -->
 
-      <h1 class="neon-glitch absolute top-[10%] left-1/2 -translate-x-1/2 text-7xl z-20"
-          data-text="TRANSCENDANCE">TRANSCENDANCE
+      <h1 class="neon-glitch absolute top-[5%] left-1/2 -translate-x-1/2 text-7xl z-20"
+          data-text="𝕋ℝ𝔸ℕ𝕊ℂ𝔼ℕ𝔻𝔸ℕℂ𝔼">𝕋ℝ𝔸ℕ𝕊ℂ𝔼ℕ𝔻𝔸ℕℂ𝔼
       </h1>
 
 
-      <h1 class="neon-glitch absolute top-[50%] left-1/2 -translate-x-1/2 text-4xl z-20"
-          data-text="👾PLAY👾">
-        👾PLAY👾
+      <h1 id="open-login"
+            class="neon-glitch absolute top-[50%] left-1/2 -translate-x-1/2 text-4xl z-20 cursor-pointer"
+            data-text="ℂ𝕆ℕℕ𝔼ℂ𝕋𝕀𝕆ℕ⮩">
+          ℂ𝕆ℕℕ𝔼ℂ𝕋𝕀𝕆ℕ⮩
       </h1>
 
-      <main class="absolute z-10 text-white text-center top-1/4">
-          <a href="#" class="text-blue-400 underline text-lg md:text-xl">Redirection</a>
-      </main>
+      <div id="login-form"
+          class="hidden absolute top-[63%] left-1/2 -translate-x-1/2 bg-black/60 p-6 rounded-xl backdrop-blur-xl shadow-2xl z-30 w-[300px] neon-border">
+
+        <form class="flex flex-col gap-4 text-white">
+          
+          <input type="text"
+                placeholder="Login"
+                class="px-3 py-2 rounded bg-gray-900/80 neon-border">
+
+          <input type="password"
+                placeholder="Mot de passe"
+                class="px-3 py-2 rounded bg-gray-900/80 neon-border">
+
+          <button type="submit"
+                  class="px-4 py-2 bg-gray-900/80 text-cyan-300 rounded font-semibold neon-border">
+            Se connecter
+          </button>
+
+        </form>
+      </div>
+
+
+
+        <!-- SCRIPT POUR AFFICHER / CACHER LE FORMULAIRE -->
+        <script>
+          document.getElementById("open-login").onclick = () => {
+            const form = document.getElementById("login-form");
+            form.classList.toggle("hidden");
+          };
+        </script>
+
 </body>
 </html>
